# zinit

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.dist.yaml  cog.toml  deny.toml  install.sh  install_run.sh  justfile  osx_build.sh  release_zinit.sh  stop.sh  treefmt.toml  trivy.yaml
.cargo/: config.toml
.github/: labeler.yml
.github/workflows/: auto-merge.yaml  autofix.yaml  changelog.yaml  cross-build.yaml  dependency-review.yml  greeting.yaml  health.yaml  issues.yaml  licenses.yaml  lint.yaml  pr-labels.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
crates/zinit/: Cargo.toml
crates/zinit-client/: Cargo.toml
crates/zinit-client/examples/: basic_usage.rs  http_client.rs
crates/zinit-client/src/: lib.rs
crates/zinit-client/tests/: integration_test.rs
crates/zinit/src/: lib.rs  main.rs
crates/zinit/src/app/: api.rs  mod.rs  rpc.rs
crates/zinit/src/manager/: buffer.rs  mod.rs
crates/zinit/src/testapp/: main.rs  mod.rs
crates/zinit/src/zinit/: config.rs  errors.rs  lifecycle.rs  mod.rs  ord.rs  service.rs  state.rs  types.rs
docker/: Dockerfile
docs/: cmd.md  installation.md  services.md
example/: example.sh
