[package]
name = "zinit-client"
version = "0.1.0"
edition = "2024"
description = "A client library for interacting with Zinit process manager"
license = "Apache-2.0"
authors = ["Yonas Yanfa and ThreeFold Tech, https://github.com/threefoldtech"]
repository = "https://github.com/threefoldtech/zinit"
readme = "../../README.md"
keywords = ["process", "manager", "client"]
categories = ["libraries"]

[dependencies]
anyhow = "1.0"
jsonrpsee = { version = "0.26.0", features = ["macros", "http-client", "ws-client"] }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", package = "reth-ipc" }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "http_client"
path = "examples/http_client.rs"
