[package]
name = "zinit"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Zinit process manager"
repository = "https://github.com/threefoldtech/zinit"
readme = "../../README.md"
keywords = ["process", "manager", "init"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
shlex = "1.3.0"
nix = { version = "0.30.1", features = ["process", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.148"
fern = "0.7.1"
log = "0.4.29"
thiserror = "2.0.17"
clap = { version = "4.5.54", features = ["derive"] }
git-version = "0.3.9"
command-group = { git = "https://github.com/yonasBSD/command-group", branch = "yonasBSD" }
dirs = "6.0.0"
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", package = "reth-ipc" }
tower-http = { version = "0.6.8", features = ["cors"] }
tower = "0.5.2"
sysinfo = "0.37.2"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tempfile = "3.24.0"

[lib]
name = "zinit"
path = "src/lib.rs"

[[bin]]
name = "zinit"
path = "src/main.rs"
